On mobile, control icons should take less space in landscape mode Fixes #2

--- a/style.css
+++ b/style.css
@@ -308,10 +308,22 @@ main {
   background-color: var(--icons-hover-color);
 }
 
-@media screen and (min-width: 320px) and (max-width: 767px) and (orientation: landscape) {
-  #map-div .ol-zoom-in {
-    background-image: url('/icons/zoom_in_12dp_E3E3E3_FILL0_wght400_GRAD0_opsz12.svg');
+@media screen and (min-height: 200px) and (max-height: 767px) and (orientation: landscape) {
+  #map-div [class*='ol-full-screen-'] {
+    scale: 1.0;
+    padding: 0.3em;
+    }
+  #map-div [class*='ol-zoom-'] {
+    scale: 1.0;
+    padding: 0.3em;
   }
+  .play-ctrl [class*='play-ctrl-'].show {
+    scale: 1.0;
+      padding: 0.3em;
+  }
+   /* #map-div .ol-zoom-in {
+    background-image: url('/icons/zoom_in_12dp_E3E3E3_FILL0_wght400_GRAD0_opsz12.svg');
+  } */
 
   /* #map-div .ol-zoom-out {
     background-image: url('/icons/zoom_out_24dp_E3E3E3_FILL0_wght400_GRAD0_opsz24.svg');
